<resources>
    <string name="app_name">LetsChat</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_account">Already have account</string>
    <string name="sign_up_with_phone">Sign up with phone</string>
    <string name="or">or</string>
    <string name="email_phone">Email/phone</string>
    <string name="click_here_for_signup">click here for signup</string>
    <string name="sign_in">Sign in</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>

    <string name="facebook_app_id">1234</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="message">Message</string>


</resources>