<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup"
    android:padding="20dp"
    android:orientation="vertical"
    android:background="#C5EAEF"
    >
    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:src="@drawable/chat"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"
        android:textSize="20sp"
        android:background="@drawable/edit"
        android:padding="5dp"
        android:layout_marginTop="60dp"
        android:id="@+id/user_name"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textSize="20sp"
        android:background="@drawable/edit"
        android:padding="5dp"
        android:inputType="textEmailAddress"
        android:layout_marginTop="10dp"
        android:id="@+id/signup_email"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textSize="20sp"
        android:background="@drawable/edit"
        android:padding="5dp"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:id="@+id/signup_password"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:id="@+id/already_have_account"
        android:textColor="@color/black"
        android:layout_gravity="end"
        android:text="@string/already_have_account"/>
    <Button
        android:id="@+id/signup"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:background="@drawable/btn"
        android:textColor="#2D2D2C"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:id="@+id/or"

        >
        <View
            android:layout_width="100dp"
            android:layout_height="2dp"
            android:background="@color/black"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textSize="26sp"
            android:textStyle="bold"
            android:layout_marginEnd="8dp"
            />
        <View
            android:layout_width="100dp"
            android:layout_height="2dp"
            android:background="@color/black"
            android:layout_gravity="center"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/dl"
        android:layout_marginBottom="40dp"
        >
        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/facebook"
            android:id="@+id/signup_facebook"
            android:layout_marginRight="15dp"
            />
        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/google"
            android:id="@+id/signup_google"
            android:layout_marginLeft="25dp"
            />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:id="@+id/signup_with_phone"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:text="@string/sign_up_with_phone"/>

</LinearLayout>